toolchain/internal/core/analysis/testdata/errors/consts/object_spread_namespaced.vdl
// @expect: E206

const baseConfig = {
  host "localhost"
}

const cfg = {
  ...env.baseConfig
}
